# ai-training-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  start.sh
.github/workflows/: main.yml
saved_models/iris_run/: model.pt  model_architecture.json
src/: config.py  scripts.py
src/api/: database.py  dbschema.py  main.py  redis.py
src/api/routers/: datasets.py  models.py
src/api/schemas/: architecture.py  dataset.py  model.py  training.py
src/api/services/: dataset_service.py  model_service.py
src/trainer/: infer.py  mlp_model.py  model.py  trainer.py  trainer_class.py
src/trainer/architectures/: __init__.py  architecture.py  mlp_architecture.py
src/trainer/datasets/: __init__.py  classification_dataset.py  data_preparation.py  regression_dataset.py
src/trainer/models/: __init__.py  mlp_model.py  model.py
tests/: run_classification_MLP.py  run_inference_MLP.py  run_nonNumeric_classification.py  run_regression_MLP.py  run_training.py
