[project]
name = "ai-training-backend"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "fastapi-camelcase (>=2.0.0,<3.0.0)",
    "python-multipart",
    "redis (>=6.1.0,<7.0.0)",
]

[tool.poetry]
packages = [
    { include = "api", from = "src" },
    { include = "trainer", from = "src" },
]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-dev = "scripts:run_dev"
start-prod = "scripts:run_prod"
create-db = "scripts:create_db"